--- a/templates/chart_view.html
+++ b/templates/chart_view.html
@@ -3,7 +3,7 @@
 {% block title %}{{ chart_title }} - Singular Weather Analytics{% endblock %}
 
 {% block content %}
-<div class="page-wrapper">
+<div class="chart-page-wrapper">
     <div class="header">
         <h1>🌤️ Singular Weather Analytics</h1>
         <h2>{{ chart_title }}</h2>
